added logo with title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Toboolist</title>
 </head>
 <body>
-    
+    <!-- Logo with title -->
+    <header>
+        <div class="head">
+            <img src="./img/Logo.png" alt="logo" id="logo">
+            <h1 id="title">Toboolist</h1>
+        </div>
+    </header>
+    <!-- /Logo with title -->
+
+    <!-- To do list -->
+    <main>
+
+    </main>
+    <!-- /To do list -->
 </body>
 </html>
