added command section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
 
     <!-- To do list -->
     <main>
+        <!-- command section -->
+        <section class="command-section">
+            <div class="command-button">
+                <button class="add-task-button">Add Task</button>
+                <button class="add-section-button">Add Section</button>
+            </div>
+        </section>
+        <!-- /command section -->
 
+        <!-- new task section -->
+        <!-- /new task section -->
+
+        <!-- today section -->
+        <!-- /today section -->
+
+        <!-- upcoming section -->
+        <!-- /upcoming section -->
     </main>
     <!-- /To do list -->
 </body>
