added tasktype configuration and new task section

--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
                 <button class="add-section-button">Add Section</button>
             </div>
         </section>
-        <!-- /command section -->
 
+        <!-- /command section -->
+        <div class="main-list">
         <!-- new task section -->
+            <section class="new-task-section">
+                <ul class="new-task-list">
+                    <h2>&dtrif; New Task</h2>
+                    <li><span class="check">&check;</span>Quarterly Newsletter<span class="editorial">Editorial</span></li>
+                </ul>
+            </section>
         <!-- /new task section -->
 
         <!-- today section -->
@@ -36,6 +43,7 @@
 
         <!-- upcoming section -->
         <!-- /upcoming section -->
+        </div>  
     </main>
     <!-- /To do list -->
 </body>
