added today section and cross config

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <!-- /command section -->
         <div class="main-list">
         <!-- new task section -->
-            <section class="new-task-section">
-                <ul class="new-task-list">
+            <section>
+                <ul class="list">
                     <h2>&dtrif; New Task</h2>
                     <li><span class="check">&check;</span>Quarterly Newsletter<span class="editorial">Editorial</span></li>
                 </ul>
@@ -39,6 +39,18 @@
         <!-- /new task section -->
 
         <!-- today section -->
+            <section>
+                <ul class="list">
+                    <h2>&dtrif; Today</h2>
+                    <li><span class="check">&check;</span>Recruiting blog post<span class="editorial">Editorial</span></li>
+
+                    <li><span class="check">&check;</span>Mobile app launch<span class="q1-goals">Q1 Goals</span></li>
+
+                    <li><span class="cross">&cross;</span>Interview John H.<span class="recruiting">Recruiting</span></li>
+
+                    <li><span class="check">&check;</span>Summit update to mobile storefronts<span class="mobile">Mobile</span></li>
+                </ul>
+            </section>    
         <!-- /today section -->
 
         <!-- upcoming section -->
