--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Toboolist</title>
 </head>
+
 <body>
     <!-- Logo with title -->
     <header>
@@ -29,34 +31,53 @@
 
         <!-- /command section -->
         <div class="main-list">
-        <!-- new task section -->
+            <!-- new task section -->
             <section>
                 <ul class="list">
                     <h2>&dtrif; New Task</h2>
-                    <li><span class="check">&check;</span>Quarterly Newsletter<span class="editorial">Editorial</span></li>
+                    <li><span class="check">&check;</span>Quarterly Newsletter<span class="editorial">Editorial</span>
+                    </li>
                 </ul>
             </section>
-        <!-- /new task section -->
+            <!-- /new task section -->
 
-        <!-- today section -->
+            <!-- today section -->
             <section>
                 <ul class="list">
                     <h2>&dtrif; Today</h2>
-                    <li><span class="check">&check;</span>Recruiting blog post<span class="editorial">Editorial</span></li>
+                    <li><span class="check">&check;</span>Recruiting blog post<span class="editorial">Editorial</span>
+                    </li>
 
                     <li><span class="check">&check;</span>Mobile app launch<span class="q1-goals">Q1 Goals</span></li>
 
-                    <li><span class="cross">&cross;</span>Interview John H.<span class="recruiting">Recruiting</span></li>
+                    <li><span class="cross">&cross;</span>Interview John H.<span class="recruiting">Recruiting</span>
+                    </li>
 
-                    <li><span class="check">&check;</span>Summit update to mobile storefronts<span class="mobile">Mobile</span></li>
+                    <li><span class="check">&check;</span>Summit update to mobile storefronts<span
+                            class="mobile">Mobile</span></li>
                 </ul>
-            </section>    
-        <!-- /today section -->
+            </section>
+            <!-- /today section -->
 
-        <!-- upcoming section -->
-        <!-- /upcoming section -->
-        </div>  
+            <!-- upcoming section -->
+            <section>
+                <ul class="list">
+                    <h2>&dtrif; Upcoming</h2>
+                    <li><span class="cross">&cross;</span>Schedule meeting with Alex</li>
+
+                    <li><span class="check">&check;</span>Homepage refresh<span class="website">Website</span></li>
+
+                    <li><span class="check">&check;</span>Onboard new Sales team members<span class="sales">Sales</span>
+                    </li>
+
+                    <li><span class="check">&check;</span>Review editorial calendar<span
+                            class="editorial">Editorial</span></li>
+                </ul>
+            </section>
+            <!-- /upcoming section -->
+        </div>
     </main>
     <!-- /To do list -->
 </body>
+
 </html>
