--- a/index.html
+++ b/index.html
@@ -18,23 +18,25 @@
         </div>
     </header>
     <!-- /Logo with title -->
-
+    
     <!-- To do list -->
     <main>
-        <!-- command section -->
-        <section class="command-section">
-            <div class="command-button">
-                <button class="add-task-button">Add Task</button>
-                <button class="add-section-button">Add Section</button>
-            </div>
-        </section>
+       
+        <div class="command-section">           
+            <section>
+                <div class="command-button">
+                    <button class="add-task-button">Add Task</button>
+                    <button class="add-section-button">Add Section</button>
+                </div>
+            </section>
+        </div>
 
-        <!-- /command section -->
+
         <div class="main-list">
             <!-- new task section -->
             <section>
                 <ul class="list">
-                    <h2>&dtrif; New Task</h2>
+                    <p>&dtrif; New Task</p>
                     <li><span class="check">&check;</span>Quarterly Newsletter<span class="editorial">Editorial</span>
                     </li>
                 </ul>
@@ -44,7 +46,7 @@
             <!-- today section -->
             <section>
                 <ul class="list">
-                    <h2>&dtrif; Today</h2>
+                    <p>&dtrif; Today</p>
                     <li><span class="check">&check;</span>Recruiting blog post<span class="editorial">Editorial</span>
                     </li>
 
@@ -62,7 +64,7 @@
             <!-- upcoming section -->
             <section>
                 <ul class="list">
-                    <h2>&dtrif; Upcoming</h2>
+                    <p>&dtrif; Upcoming</p>
                     <li><span class="cross">&cross;</span>Schedule meeting with Alex</li>
 
                     <li><span class="check">&check;</span>Homepage refresh<span class="website">Website</span></li>
