--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="main-list">
             <!-- new task section -->
             <section>
-                <p>&dtrif; New Task</p>
+                <h2>&dtrif; New Task</h2>
                 <ul class="list">                 
                     <li><span class="check">&check;</span>Quarterly Newsletter<span class="editorial">Editorial</span>
                     </li>
@@ -45,7 +45,7 @@
 
             <!-- today section -->
             <section>
-                <p>&dtrif; Today</p>
+                <h2>&dtrif; Today</h2>
                 <ul class="list">                   
                     <li><span class="check">&check;</span>Recruiting blog post<span class="editorial">Editorial</span>
                     </li>
@@ -63,7 +63,7 @@
 
             <!-- upcoming section -->
             <section>
-                <p>&dtrif; Upcoming</p>
+                <h2>&dtrif; Upcoming</h2>
                 <ul class="list">                    
                     <li><span class="cross">&cross;</span>Schedule meeting with Alex</li>
 
